# blockchain-messaging

src/: CMakeLists.txt
src/core/: block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  smart_contract.hpp  smart_contract_engine.cpp  smart_contract_engine.hpp  transaction.cpp  transaction.hpp
src/crypto/: encryption.cpp  encryption.hpp  hash.cpp  hash.hpp  hash_tree.hpp  key_derivation.hpp
src/network/: node.cpp  node.hpp  p2p_network.cpp  p2p_network.hpp  protocol.cpp  protocol.hpp
src/utils/: cache_manager.hpp  error_handler.hpp  logger.cpp  logger.hpp  memory_pool.cpp  memory_pool.hpp  performance_monitor.hpp
src/validation/: consensus.cpp  consensus.hpp  validator.cpp  validator.hpp
src/wallet/: wallet.cpp  wallet.hpp
tests/: CMakeLists.txt  test_blockchain.cpp  test_crypto.cpp  test_transaction.cpp  test_wallet.cpp
